Criação e adição da classe Conexao e método Read

--- a/src/main/webapp/txt.html
+++ b/src/main/webapp/txt.html
@@ -8,6 +8,8 @@
 <h1>Texto informativo sobre oq é o sistema!</h1>
 <!-- Agora que já esta logado ... -->
 <!-- Fzer button bonitinho -->
-<a href="goToList">Continue</a>
+<a href="goToList">LIST</a>
+<a href="goToCreate">ADD</a>
+
 </body>
 </html>
