--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <form action="login" method="post">
-		<label for="login">Login:</label> 
-		<input type="text" 
-			name="login"> 
-			<br> <br> 
-			<label for="pwd">Password:
-			</label>
-		<input type="password" name="pwd"> <br>
-		<br> <input type="submit">
+<label for="">Login:</label> 
+		<input type="text" name="login">
+		<br> <br> 
+		<label for="pwd">Password: </label> 
+		<input
+			type="password" name="pwd"> <br> <br> 
+			<input
+			type="submit">
 	</form>
 </body>
 </html>
