--- a/src/main/webapp/txt.html
+++ b/src/main/webapp/txt.html
@@ -5,8 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>Texto informativo sobre oq é o sistema!</h1>
-<!-- Agora que já esta logado ... -->
+<h1>Informative text about what the system is!</h1>
+<h2>This system aims to manage gym members by performing Create, Read, Update and Delete.</h2>
 <!-- Fzer button bonitinho -->
 <a href="goToList">LIST</a>
 <a href="goToCreate">ADD</a>
