--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Login</title>
+  <meta charset="UTF-8">
+  <title>Login</title>
+  <link rel="stylesheet" href="login.css">
 </head>
 <body>
-<!-- add css e js e ver sobre filter-->
-<form action="login" method="post">
-<label for="">Login:</label> 
-		<input type="text" name="login">
-		<br> <br> 
-		<label for="pwd">Password: </label> 
-		<input
-			type="password" name="pwd"> <br> <br> 
-			<input
-			type="submit">
-	</form>
+<h1>Login Area</h1>
+  <form action="login" method="post">
+    <label for="">Login:</label> 
+    <input type="text" name="login">
+    <br><br> 
+    <label for="pwd">Password: </label> 
+    <input type="password" name="pwd">
+    <br><br> 
+    <input type="submit">
+  </form>
 </body>
 </html>
