--- a/src/main/webapp/txt.html
+++ b/src/main/webapp/txt.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>About the System</title>
+<link rel="stylesheet" href="txt.css">
 </head>
 <body>
 <h1>Informative text about what the system is!</h1>
 <h2>This system aims to manage gym members by performing Create, Read, Update and Delete.</h2>
-<!-- Fzer button bonitinho -->
 <a href="goToList">LIST</a>
 <a href="goToCreate">ADD</a>
 
